--- a/sass/_landingpage.scss
+++ b/sass/_landingpage.scss
@@ -142,6 +142,10 @@
 }
 
 .home {
+
+    .about-content {
+        padding: 0 0 2rem 0;
+    }
     #ihf-main-container .col-xs-12 {
         padding: 1rem;
         a {
